sent desktop version to review. Manual Line item html not showing comment fixed. Auto set line item # on load of older quotes.

--- a/force-app/main/default/lwc/prodSelected/prodSelected.css
+++ b/force-app/main/default/lwc/prodSelected/prodSelected.css
@@ -69,9 +69,6 @@
     font-weight: bold;
 }
 
-.qtyDiv{
-    padding-left: 3.2%;
-}
 .qtyMark{
     width: 85%;
     
@@ -118,10 +115,15 @@
       width: 90%; 
       margin-left: 5%;
   }
-
+  .qtyDiv{
+    padding-left: 3.2%;
+}
   .arrBtn{
     margin-top: 1.5%;
     padding-left: 5px;
+  }
+  .manQ{
+    margin-left:-2%; 
   }
 .changedProduct{
     color: #313131; 
